style(component): :lipstick: add z-index to make sure this is on top

--- a/src/app/utilities/nav-bar/nav-bar.component.scss
+++ b/src/app/utilities/nav-bar/nav-bar.component.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   background-size:cover;
+
 }
 .thx{
   position: fixed;
@@ -18,9 +19,10 @@ nav{
   position: fixed;
   top:50px;
   text-align:center;
+  z-index: 1;
+
 }
 nav a{
-  font-family: 'Oswald', sans-serif;
   font-weight:500;
   text-transform:uppercase;
   text-decoration:none;
@@ -82,5 +84,11 @@ nav a:hover:before{
 @for $i from 1 through 5 {
   nav a:nth-child(#{$i}){
     animation:show .1s #{$i*0.1+1}s ease 1 both;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav {
+    width: 100%;
   }
 }
